# Emotion-Recognition

Emotion Detector/: CKplus_Edit.cpp  CMakeLists.txt  camera_shot.cpp  classification.cpp  crop_picture.cpp  emotion_detector.cpp  extend_dbset.cpp  face_detection.cpp  txtmake.cpp
